--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -296,6 +296,10 @@ a:visited {
 	margin: 0 20px;
 }
 
+#mobile-menu > ul > li:first-child {
+	color: #0e76bc;
+}
+
 #mobile-menu ul li:hover {	
 	cursor: pointer;
 	color: #038236;
